# monkey-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build-and-test.yaml
cmake/: AddCatch2Tests.cmake
include/monkeypp/: monkeypp.hpp
monkeypp/apps/repl/src/: CMakeLists.txt  repl.cpp
monkeypp/apps/repl/tests/: CMakeLists.txt
